Animation, Fixed Margin, Footer fixed position

--- a/blog.html
+++ b/blog.html
@@ -15,40 +15,39 @@
     <title>DJ-Tiestos</title>
 </head>
 <body>
-<header class="header header--notHome">
-    <div class="container pt-1 pt-md-4 header__top">
-        <nav class="navbar navbar-expand-lg">
-            <a class="navbar-brand" href="index.html">
-                <img class="img-fluid" src="img/logo-wp-festival.png" alt="WP Music Festival">
-            </a>
-            <button class="navbar-toggler js-custom-toggler custom-toggler collapsed" type="button" data-toggle="collapse"
-                data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span> </span>
-                <span> </span>
-                <span> </span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-                <div class="navbar-nav text-center">
-                    <a class="nav-item nav-link" href="wp-festival.html">WP Festival </a>
-                    <a class="nav-item nav-link" href="djs.html">DJS</a>
-                    <a class="nav-item nav-link" href="presentaciones.html">Presentaciones</a>
-                    <a class="nav-item nav-link current_page_item" href="blog.html">Blog</a>
-                    <a class="nav-item nav-link" href="contacto.html">Contacto</a>
+    <header class="header header--notHome">
+        <div class="container pt-1 pt-md-4 header__top">
+            <nav class="navbar navbar-expand-lg">
+                <a class="navbar-brand" href="index.html">
+                    <img class="img-fluid" src="img/logo-wp-festival.png" alt="WP Music Festival">
+                </a>
+                <button class="navbar-toggler js-custom-toggler custom-toggler collapsed" type="button" data-toggle="collapse"
+                    data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span> </span>
+                    <span> </span>
+                    <span> </span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                    <div class="navbar-nav text-center">
+                        <a class="nav-item nav-link" href="wp-festival.html">WP Festival </a>
+                        <a class="nav-item nav-link" href="djs.html">DJS</a>
+                        <a class="nav-item nav-link" href="presentaciones.html">Presentaciones</a>
+                        <a class="nav-item nav-link current_page_item" href="blog.html">Blog</a>
+                        <a class="nav-item nav-link" href="contacto.html">Contacto</a>
+                    </div>
                 </div>
-            </div>
-        </nav>
-    </div>
-    <div class="container header__bottom">
-        <h2 class="title title--page">Blog</h2>
-        <ul class="list-unstyled d-flex breadcrumb">
-            <li class="breadcrumb-item"><a class="disabled" href="#">Wp Festival</a></li>
-            <li class="breadcrumb-item"><a href="#">Blog</a></li>
-        </ul>
-    </div>
-</header>
-<!--Header-->
+            </nav>
+        </div>
+        <div class="container header__bottom">
+            <h2 class="title title--page">Blog</h2>
+            <ul class="list-unstyled d-flex breadcrumb">
+                <li class="breadcrumb-item"><a class="disabled" href="#">Wp Festival</a></li>
+                <li class="breadcrumb-item"><a href="#">Blog</a></li>
+            </ul>
+        </div>
+    </header><!--Header-->
     <main class="main">
-        <section class="presentations--inside sectionBorder sectionBorder--top ">
+        <section class="presentations--inside sectionBorder sectionBorder--top paddingSection">
             <header class="container sectionBorder--top">
                 <h2 class="title title--black">Noticias</h2>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
@@ -79,22 +78,22 @@
                         </div>
                     </div>
                     <div class="col col-md-11 blog__content">
-                           <header class="blog__header">
-                               <figure class="m-0">
+                            <header class="blog__header">
+                                <figure class="m-0">
                                     <a href="details-blog.html" class="blog__link">
                                         <img src="img/blog.jpg" alt="Blog" class="img-fluid">
                                     </a>
-                               </figure>
-                               <h3 class="text-center text-md-left blog__title"><a href="details-blog.html">Confirmados los mejores Djs del mundo</a></h3>
-                               <h6 class="blog__category d-none d-md-block"><i class="fa fa-th-list" aria-hidden="true"></i> Información General</h6>
-                           </header>
-                           <p>
+                                </figure>
+                                <h3 class="text-center text-md-left blog__title"><a href="details-blog.html">Confirmados los mejores Djs del mundo</a></h3>
+                                <h6 class="blog__category d-none d-md-block"><i class="fa fa-th-list" aria-hidden="true"></i> Información General</h6>
+                            </header>
+                            <p>
                             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
                             magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
                             gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
                             elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos
                             et accusam et justo duo dolores et ea rebum.
-                           </p>
+                            </p>
                     </div>
                 </article>
                 <article class="row blog__item">
@@ -267,9 +266,7 @@
                 </article>
             </div>
         </section>
-        
-
-        <section class="buyTicket">
+        <section class="buyTicket paddingSection">
             <div class="buyTicket__container">
                 <h3>Compra tus entradas</h3>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
@@ -281,36 +278,33 @@
     <footer class="footer">
         <div class="container-fluid pl-0 pr-0">
             <div class="row">
-                <div class="col-12 col-md-6 footer__information d-flex flex-column justify-content-center">
-                    <h5>WP FESTIVAL MUSIC - Bogotá</h5>
-                    <p class="d-none d-md-block mt-3">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
-                    <ul class="list-unstyled d-flex mt-3 justify-content-center justify-content-lg-start pl-3 pl-lg-0">
-                        <li class="mr-4">
-                            <a href="#">
-                                <img src="img/icon_twitter.png" alt="">
-                            </a>
-                        </li>
-                        <li class="mr-4">
-                            <a href="#">
-                                <img src="img/icon_facebook.png" alt="">
-                            </a>
-                        </li>
-                        <li class="mr-4">
-                            <a href="#">
-                                <img src="img/icon_instagram.png" alt="">
-                            </a>
-                        </li>
-                    </ul>
-                    <ul class="list-unstyled d-flex mt-3 footer__nav flex-wrap justify-content-center justify-content-lg-start pl-3 pl-lg-0">
-                        <li class="mr-3"><a href="#">Wp Festival</a></li>
-                        <li class="mr-3"><a href="#">DJS</a></li>
-                        <li class="mr-3"><a href="#">Presentaciones</a></li>
-                        <li class="mr-3"><a href="#">Blog</a></li>
-                        <li class="mr-3"><a href="#">Contacto</a></li>
-                    </ul>
+                <div class="col-lg-6">
+                    <div class="d-flex flex-column justify-content-center footer__information text-center text-lg-left">
+                        <h5>WP FESTIVAL MUSIC - Bogotá</h5>
+                        <p class="d-none d-md-block mt-3">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+                            nonumy eirmod
+                            tempor invidunt ut labore et dolore
+                            magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
+                            rebum.</p>
+                        <ul class="list-unstyled d-flex justify-content-center justify-content-lg-start mt-5">
+                            <li class="mr-4"><a href=""><img src="img/icon_twitter.png" alt=""></a></li>
+                            <li class="mr-4"><a href=""><img src="img/icon_facebook.png" alt=""></a></li>
+                            <li class="mr-4"><a href=""><img src="img/icon_instagram.png" alt=""></a></li>
+                        </ul>
+                        <nav class="footer__nav">
+                            <ul class="list-unstyled  d-flex justify-content-center justify-content-lg-start">
+                                <li class="mr-3"><a href="#">WP FESTIVAL</a></li>
+                                <li class="mr-3"><a href="#">DJS</a></li>
+                                <li class="mr-3"><a href="#">Presentaciones</a></li>
+                                <li class="mr-3"><a href="#">Blog</a></li>
+                                <li class="mr-3"><a href="#">Contacto</a></li>
+                            </ul>
+                        </nav>
+                    </div>
                 </div>
-                <div class="d-none d-lg-block col-md-6">
-                    <img class="img-fluid" src="img/mapa.png" alt="Mapa de Google">
+
+                <div class="col-lg-6 d-none d-lg-block">
+                    <img src="img/mapa.png" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
