--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
     </header> <!--Header-->
     <main class="main">
-        <section class="presentations sectionBorder sectionBorder--bottom">
+        <section class="presentations sectionBorder sectionBorder--bottom paddingSection">
             <article class="container">
                 <h2 class="title title--white">Presentaciones</h2>
                 <p>Aquí encontrarás los detalles de las presentaciones horarios, djs, escenario y la posibilidad de comprar tickets</p>
@@ -134,7 +134,7 @@
                 </div>
             </article>
         </section> <!--End Presentaciones-->
-        <section class="numberEvents d-none d-lg-block">
+        <section class="numberEvents d-none d-lg-block paddingSection">
             <div class="container">
                 <article class="row justify-content-between align-items-center">
                     <div class="numberEvents__item">
@@ -160,7 +160,7 @@
                 </article>
             </div>
         </section> <!--End NumberEvents-->
-        <section class="djs sectionBorder--top sectionBorder--bottom">
+        <section class="djs sectionBorder--top sectionBorder--bottom paddingSection">
             <div class="container">
                 <article class="row">
                     <div class="col-md-9 pl-0 order-1 order-md-0">
@@ -255,7 +255,7 @@
                 </article>
             </div>
         </section> <!--End DJS-->
-        <section class="tickets">
+        <section class="tickets paddingSection">
             <article class="container">
                 <h2 class="title title--white">Tickets</h2>
                 <p class="subtitle">Tenemos varias opciones para todos los gustos, consigue una que se adapte a ti.</p>
@@ -311,7 +311,7 @@
                 </div>
             </article>
         </section> <!--End Tickets-->
-        <section class="sponsors">
+        <section class="sponsors paddingSection">
             <div class="container">
                 <h2 class="title title--white title--small text-md-right">Patrocinadores</h2>
                 <div class="row">
@@ -338,7 +338,7 @@
                 </div>
             </div>
         </section> <!--End Sponsors-->
-        <section class="gallery pb-0 position-relative">
+        <section class="gallery pb-0 position-relative paddingSection">
             <header class="container sectionBorder--top">
                 <h2 class="title title--black">Galeria de imagenes</h2>
                 <p>Fotografias evento del año anterior Medellín 2017</p>
@@ -402,7 +402,7 @@
                 </div>
             </article>
         </section> <!--End Gallery-->
-        <section class="news">
+        <section class="news paddingSection">
             <article class="container">
                 <h2 class="title title--white title--small text-md-right">Noticias</h2>
                 <div class="row mt-5">
@@ -439,36 +439,33 @@
     <footer class="footer">
         <div class="container-fluid pl-0 pr-0">
             <div class="row">
-                <div class="col-12 col-md-6 footer__information d-flex flex-column justify-content-center">
-                    <h5>WP FESTIVAL MUSIC - Bogotá</h5>
-                    <p class="d-none d-md-block mt-3">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
-                    <ul class="list-unstyled d-flex mt-3 justify-content-center justify-content-lg-start pl-3 pl-lg-0">
-                        <li class="mr-4">
-                            <a href="#">
-                                <img src="img/icon_twitter.png" alt="">
-                            </a>
-                        </li>
-                        <li class="mr-4">
-                            <a href="#">
-                                <img src="img/icon_facebook.png" alt="">
-                            </a>
-                        </li>
-                        <li class="mr-4">
-                            <a href="#">
-                                <img src="img/icon_instagram.png" alt="">
-                            </a>
-                        </li>
-                    </ul>
-                    <ul class="list-unstyled d-flex mt-3 footer__nav flex-wrap justify-content-center justify-content-lg-start pl-3 pl-lg-0">
-                        <li class="mr-3"><a href="#">Wp Festival</a></li>
-                        <li class="mr-3"><a href="#">DJS</a></li>
-                        <li class="mr-3"><a href="#">Presentaciones</a></li>
-                        <li class="mr-3"><a href="#">Blog</a></li>
-                        <li class="mr-3"><a href="#">Contacto</a></li>
-                    </ul>
+                <div class="col-lg-6">
+                    <div class="d-flex flex-column justify-content-center footer__information text-center text-lg-left">
+                        <h5>WP FESTIVAL MUSIC - Bogotá</h5>
+                        <p class="d-none d-md-block mt-3">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+                            nonumy eirmod
+                            tempor invidunt ut labore et dolore
+                            magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
+                            rebum.</p>
+                        <ul class="list-unstyled d-flex justify-content-center justify-content-lg-start mt-5">
+                            <li class="mr-4"><a href=""><img src="img/icon_twitter.png" alt=""></a></li>
+                            <li class="mr-4"><a href=""><img src="img/icon_facebook.png" alt=""></a></li>
+                            <li class="mr-4"><a href=""><img src="img/icon_instagram.png" alt=""></a></li>
+                        </ul>
+                        <nav class="footer__nav">
+                            <ul class="list-unstyled  d-flex justify-content-center justify-content-lg-start">
+                                <li class="mr-3"><a href="#">WP FESTIVAL</a></li>
+                                <li class="mr-3"><a href="#">DJS</a></li>
+                                <li class="mr-3"><a href="#">Presentaciones</a></li>
+                                <li class="mr-3"><a href="#">Blog</a></li>
+                                <li class="mr-3"><a href="#">Contacto</a></li>
+                            </ul>
+                        </nav>
+                    </div>
                 </div>
-                <div class="d-none d-lg-block col-md-6">
-                    <img class="img-fluid" src="img/mapa.png" alt="Mapa de Google">
+    
+                <div class="col-lg-6 d-none d-lg-block">
+                    <img src="img/mapa.png" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
