--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav text-center">
-                        <a class="nav-item nav-link active" href="#">WP Festival <span class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link" href="#">DJS</a>
-                        <a class="nav-item nav-link" href="#">Presentaciones</a>
-                        <a class="nav-item nav-link" href="#">Blog</a>
-                        <a class="nav-item nav-link" href="#">Contacto</a>
+                        <a class="nav-item nav-link active" href="wp-festival.html">WP Festival <span class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link" href="djs.html">DJS</a>
+                        <a class="nav-item nav-link" href="presentaciones.html">Presentaciones</a>
+                        <a class="nav-item nav-link" href="blog.html">Blog</a>
+                        <a class="nav-item nav-link" href="contacto.html">Contacto</a>
                     </div>
                 </div>
             </nav>
@@ -63,7 +63,7 @@
     </header>
     <!--Header-->
     <main class="main">
-        <section class="presentations sectionBorder sectionBorder--bottom">
+        <section class="presentations sectionBorder sectionBorder--bottom boxSection">
             <article class="container">
                 <h2 class="title title--white">Presentaciones</h2>
                 <p>Aquí encontrarás los detalles de las presentaciones horarios, djs, escenario y la posibilidad de
@@ -148,7 +148,7 @@
             </article>
         </section>
         <!--End Presentaciones-->
-        <section class="numberEvents d-none d-lg-block">
+        <section class="numberEvents d-none d-lg-block boxSection">
             <div class="container">
                 <article class="row justify-content-between align-items-center">
                     <div class="numberEvents__item">
@@ -175,7 +175,7 @@
             </div>
         </section>
         <!--End NumberEvents-->
-        <section class="djs sectionBorder--top sectionBorder--bottom">
+        <section class="djs sectionBorder--top sectionBorder--bottom boxSection">
             <div class="container">
                 <article class="row">
                     <div class="col-md-9 pl-0 order-1 order-md-0">
@@ -272,7 +272,7 @@
                 </article>
             </div>
         </section> <!--End DJS-->
-        <section class="tickets">
+        <section class="tickets boxSection">
             <article class="container">
                 <h2 class="title title--white">Tickets</h2>
                 <p class="subtitle">Tenemos varias opciones para todos los gustos, consigue una que se adapte a ti.</p>
@@ -328,7 +328,7 @@
                 </div>
             </article>
         </section> <!--End Tickets-->
-        <section class="sponsors">
+        <section class="sponsors boxSection">
             <div class="container">
                 <h2 class="title title--white title--small text-md-right">Patrocinadores</h2>
                 <div class="row">
@@ -357,7 +357,7 @@
                 </div>
             </div>
         </section> <!--End Sponsors-->
-        <section class="gallery pb-0">
+        <section class="gallery pb-0 boxSection">
             <header class="container sectionBorder--top">
                 <h2 class="title title--black">Galeria de imagenes</h2>
                 <p>Fotografias evento del año anterior Medellín 2017</p>
@@ -421,7 +421,7 @@
                 </div>
             </article>
         </section><!--End Gallery-->
-        <section class="news d-none d-md-block">
+        <section class="news d-none d-md-block boxSection">
             <div class="container">
                 <h2 class="title title--white title--small text-md-right">Noticias</h2>
                 <div class="row">
