page djs finished

--- a/wp-festival.html
+++ b/wp-festival.html
@@ -103,7 +103,7 @@
                     </div>
                 </div>
             </article>
-        </section>
+        </section> <!--End Festival-->
         <section class="sponsors boxSection">
             <div class="container">
                 <h2 class="title title--white title--small text-md-right">Patrocinadores</h2>
