Single blog finalizado

--- a/single-blog.html
+++ b/single-blog.html
@@ -13,7 +13,7 @@
     <!-- Add the slick-theme.css if you want default styling -->
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.0/slick/slick-theme.css" />
     <link rel="stylesheet" href="css/main.css">
-    <title>DJ-Tiestos | Blogs</title>
+    <title>DJ-Tiestos | Preventa inicial de entradas Wp Festival</title>
 </head>
 
 <body>
@@ -42,30 +42,20 @@
             </nav>
         </div>
         <div class="container header__bottom">
-           <h2 class="title title--page">Blog</h2>
+           <h2 class="title title--page">Wp Festival</h2>
            <ul class="list-unstyled d-flex breadcrumb">
                <li class="breadcrumb-item">
                    <a href="#" class="disabled">WP festival</a>
                </li>
                 <li class="breadcrumb-item">
-                    <a href="#">Blog</a>
+                    <a href="#">Preventa inicial de entradas Wp Festival</a>
                 </li>
            </ul>
         </div>
     </header>
     <!--Header-->
     <main class="main">
-        <section class="presentations--inside position-relative boxSection">
-            <header class="container sectionBorder--top">
-                <h2 class="title title--black">Noticias</h2>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
-                magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-                gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
-                elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
-            </header>
-            
-        </section><!--End Blog Introductions-->
-        <section class="blog container boxSection pt-0">
+        <section class="blog container boxSection">
             <article class="row blog__item">
                 <div class="col col-md-1 d-none d-md-block blog__share">
                     <div class="blog__date">
@@ -88,11 +78,11 @@
                 <div class="col col-md-11 blog__content">
                     <header class="blog__header">
                         <figure>
-                            <a href="single-blog.html" class="blog__link">
+                            <a href="#" class="blog__link">
                                 <img src="img/blog.jpg" alt="Blog" class="img-fluid">
                             </a>
                         </figure>
-                        <h3 class="text-center text-md-left blog__title"><a href="single-blog.html">Preventa inicial de entradas Wp Festival</a></h3>
+                        <h3 class="text-center text-md-left blog__title"><a href="#">Preventa inicial de entradas Wp Festival</a></h3>
                         <h6 class="blog__category d-none d-md-block">Información General</h6>
                     </header>
                     <p>
@@ -102,92 +92,27 @@
                         elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos
                         et accusam et justo duo dolores et ea rebum.
                     </p>
-                </div>
-            </article>
-            <article class="row blog__item">
-                <div class="col col-md-1 d-none d-md-block blog__share">
-                    <div class="blog__date">
-                        <strong class="blog__date--day text--red">29</strong>
-                        <strong class="blog__date--month">Mar</strong>
-                    </div>
-                    <div class="blog__icons">
-                        <i class="blog__icons--custom fa fa-commenting-o" aria-hidden="true"></i>
-                        <strong class="text--red">19</strong>
-                    </div>
-                    <div class="blog__icons">
-                        <i class="blog__icons--custom fa fa-thumbs-o-up" aria-hidden="true"></i>
-                        <strong class="text--red">90</strong>
-                    </div>
-                    <div class="blog__icons">
-                        <i class="blog__icons--custom fa fa-share-alt" aria-hidden="true"></i>
-                        <strong class="text--red">8</strong>
-                    </div>
-                </div>
-                <div class="col col-md-11 blog__content">
-                    <header class="blog__header">
-                        <figure>
-                            <a href="#" class="blog__link">
-                                <img src="img/blog-1.jpg" alt="Blog" class="img-fluid">
-                            </a>
-                        </figure>
-                        <h3 class="text-center text-md-left blog__title"><a href="#">Preventa inicial de entradas Wp Festival</a></h3>
-                        <h6 class="blog__category d-none d-md-block">Información General</h6>
-                    </header>
                     <p>
-                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-                        et dolore
-                        magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita
-                        kasd
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
+                        magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
                         gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
                         sadipscing
-                        elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                        At vero eos
+                        elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
+                        eos
+                        et accusam et justo duo dolores et ea rebum.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
+                        magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
+                        gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
+                        sadipscing
+                        elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
+                        eos
                         et accusam et justo duo dolores et ea rebum.
                     </p>
                 </div>
             </article>
-            <article class="row blog__item mb-0">
-                <div class="col col-md-1 d-none d-md-block blog__share">
-                    <div class="blog__date">
-                        <strong class="blog__date--day text--red">29</strong>
-                        <strong class="blog__date--month">Mar</strong>
-                    </div>
-                    <div class="blog__icons">
-                        <i class="blog__icons--custom fa fa-commenting-o" aria-hidden="true"></i>
-                        <strong class="text--red">19</strong>
-                    </div>
-                    <div class="blog__icons">
-                        <i class="blog__icons--custom fa fa-thumbs-o-up" aria-hidden="true"></i>
-                        <strong class="text--red">90</strong>
-                    </div>
-                    <div class="blog__icons">
-                        <i class="blog__icons--custom fa fa-share-alt" aria-hidden="true"></i>
-                        <strong class="text--red">8</strong>
-                    </div>
-                </div>
-                <div class="col col-md-11 blog__content">
-                    <header class="blog__header">
-                        <figure>
-                            <a href="#" class="blog__link">
-                                <img src="img/blog-2.jpg" alt="Blog" class="img-fluid">
-                            </a>
-                        </figure>
-                        <h3 class="text-center text-md-left blog__title"><a href="#">Preventa inicial de entradas Wp Festival</a></h3>
-                        <h6 class="blog__category d-none d-md-block">Información General</h6>
-                    </header>
-                    <p>
-                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-                        et dolore
-                        magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita
-                        kasd
-                        gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
-                        sadipscing
-                        elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-                        At vero eos
-                        et accusam et justo duo dolores et ea rebum.
-                    </p>
-                </div>
-            </article>
+            
         </section><!--Blog-->        
         <section class="buyTicket boxSection">
             <article class="container buyTicket__container">
