fixed gallery home resolution + 1366

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                 <h2 class="title title--black">Galeria de imagenes</h2>
                 <p>Fotografias evento del año anterior Medellín 2017</p>
             </header>
-            <article class="container-fluid">
+            <article class="container-fluid gallery__container">
                 <div class="row mt-5">
                     <div class="col-6 col-md-4 p-0">
                         <figure class="gallery__animation">
